--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -9,6 +8,8 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+
+
 
 # testing
 /coverage
@@ -32,10 +33,14 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
-
+config.txt
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
+
+/src/generated/prisma
