--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cookie": "^1.0.2",
-    "html2canvas": "^1.4.1",
+    "formidable": "^3.5.4",
+    "joi": "^17.13.3",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.523.0",
     "mysql2": "^3.14.1",
@@ -22,12 +23,15 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-to-print": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
